--- a/contactform-pusatlowongan2.html
+++ b/contactform-pusatlowongan2.html
@@ -192,7 +192,7 @@ function myFunction() {
           <input name="draftResponse" type="hidden" value="[null,null,&quot;3963188676536163605&quot;]">
                     <input name="pageHistory" type="hidden" value="0">
                     <input name="fbzx" type="hidden" value="3963188676536163605">
-          <button type="submit" name="submit" class="btn btn-default">Kirim</button>
+          <button type="submit" name="submit" class="btn btn-default">Submit</button>
           </div>
       </form>
             <div id="fade">
