--- a/contactform-pusatlowongan2.html
+++ b/contactform-pusatlowongan2.html
@@ -170,28 +170,28 @@ function myFunction() {
             <form action="https://docs.google.com/forms/d/1yteejmPNeJWJ_qvKVaGYVoIgnKZZdIPjPpgqq9kDr2Y/formResponse" id="ss-form" method="POST" onsubmit="fadeEffect.init('fade', 1);document.getElementById('fade').style.display = 'block'" target="hidden_iframe">
           <div class="styled-input">
                         <div class="styled-input-in">
-                <input type="text" aria-label="Nama" name="entry.2005620554" value="" id="entry.2005620554" dir="auto" title="" required="required">
+                <input type="text" aria-label="Nama" name="entry.2005620554" value="" id="entry.1633920210" dir="auto" title="" required="required">
                                 <label>Nama</label>
                                 <span class="span1"></span><span class="span2"></span>
             </div>
           </div>
           <div class="styled-input">
                         <div class="styled-input-in">
-                <input type="email" aria-label="Email" name="entry.1045781291" value="" id="entry.1045781291" dir="auto" title="Must be a valid email address" required="required">
+                <input type="email" aria-label="Email" name="entry.1045781291" value="" id="entry.227649005" dir="auto" title="Must be a valid email address" required="required">
                                 <label>Email</label>
                                 <span class="span1"></span><span class="span2"></span>
             </div>
           </div>
           <div class="styled-input wide">
                         <div class="styled-input-in">
-                <textarea aria-label="Comments" name="entry.839337160" rows="8" cols="0" id="entry.839337160" dir="auto" aria-required="true" required="required"></textarea>
+                <textarea aria-label="Pesan" name="entry.839337160" rows="8" cols="0" id="entry.1846923513" dir="auto" aria-required="true" required="required"></textarea>
                                 <label>Pesan</label>
                                 <span class="span1"></span><span class="span2"></span>
             </div>
           </div>
-          <input name="draftResponse" type="hidden" value="[null,null,&quot;3963188676536163605&quot;]">
+          <input name="draftResponse" type="hidden" value="[null,null,&quot;-3145548043943321978&quot;]">
                     <input name="pageHistory" type="hidden" value="0">
-                    <input name="fbzx" type="hidden" value="3963188676536163605">
+                    <input name="fbzx" type="hidden" value="-3145548043943321978">
           <button type="submit" name="submit" class="btn btn-default">Submit</button>
           </div>
       </form>
